--- a/SaveOurFavs- template/index.html
+++ b/SaveOurFavs- template/index.html
@@ -304,10 +304,9 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-right">
-          <a href="#"><span class="icofont-twitter"></span></a>
-          <a href="#"><span class="icofont-facebook"></span></a>
-          <a href="#"><span class="icofont-dribbble"></span></a>
-          <a href="#"><span class="icofont-behance"></span></a>
+          <a href="https://twitter.com/joseeruano"><span class="icofont-twitter"></span></a>
+          <a href="https://www.instagram.com/joseeruano/"><span class="icofont-instagram"></span></a>
+          <a href="https://github.com/joseeruano"><span class="icofont-github"></span></a>
         </div>
       </div>
     </div>
