--- a/SaveOurFavs- template/index.html
+++ b/SaveOurFavs- template/index.html
@@ -49,17 +49,9 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
-        <div class="col-md-6 d-none d-md-block  mr-auto">
-          <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
-            <div>
-              <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
-          </div>
-        </div>
         <div class="col-md-4 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiisexplicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
+          <p>Contact me over email and discuss new ideas <br> <a href="mailto:joseeduardoruano@gmail.com">joseeduardoruano@gmail.com</a></p>
         </div>
       </div>
 
