--- a/SaveOurFavs- template/index.html
+++ b/SaveOurFavs- template/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="col-md-4 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Contact me over email and discuss new ideas <br> <a href="mailto:joseeduardoruano@gmail.com">joseeduardoruano@gmail.com</a></p>
+          <p>Contact me over email and let's discuss new ideas<br> <a href="mailto:joseeduardoruano@gmail.com">joseeduardoruano@gmail.com</a></p>
         </div>
       </div>
 
@@ -60,7 +60,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">MyPortfolio.</a>
+      <a class="navbar-brand" href="index.html">Save our Favs.</a>
 
       <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
@@ -76,8 +76,8 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hey, I'm Johan Stanworth</h2>
-            <p class="mb-0">Freelance Creative &amp; Professional Graphics Designer</p>
+            <h2>Your favorite restaurant might close forever. Help save it.</h2>
+            <p class="mb-0">Gift cards help "flatten the curve" of lost income from COVID-19.</p>
           </div>
           <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
@@ -154,7 +154,7 @@
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
             <h3 class="h3 heading">My Clients</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+            <p>This are just some of the restaurantes we are working with.</p>
           </div>
         </div>
         <div class="row">
@@ -186,8 +186,8 @@
       <div class="container">
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
-            <h3 class="h3 heading">My Services</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+            <h3 class="h3 heading">Our duty as loyal customers</h3>
+            <p>Our small businesses need us more than ever. Even though we can’t leave home, we can still support local restaurants by buying gift cards. It’s basically a mini-loan, so buy one now and make a plan to use it later.</p>
           </div>
         </div>
         <div class="row">
